--- a/app/build.gradle
+++ b/app/build.gradle
@@ -45,4 +45,11 @@ dependencies {
     //RealtimeDatabase
     implementation 'com.google.firebase:firebase-database'
 
+    //Firebase Authentication
+    implementation 'com.google.firebase:firebase-auth'
+    implementation 'com.firebaseui:firebase-ui-auth:8.0.2'
+
+    //Lottie
+    implementation 'com.airbnb.android:lottie:5.2.0'
+
 }
